Added an alert button

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     'nav nav nav nav nav nav'
     'side side side intro intro intro'
     'ft ft ft ft ft ft';
+  font-family: 'Open Sans', sans-serif;
 }
 
 table, th, td {
